k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superhero-django-api-deploy
  labels:
    app: backend-superhero-django-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-superhero-django-api
  template:
    metadata:
      labels:
        app: backend-superhero-django-api
    spec:
      containers:
      - name: superhero-django-api
        image: superhero-django-api
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
