k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: superhero-django-api-svc
spec:
  selector:
    app: backend-superhero-django-api
  ports:
   -  name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
